--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "eslint": "^7.21.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -26,7 +29,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5",
-    "eslint": "^7.20.0"
+    "typescript": "^4.1.5"
   }
 }
