--- a/server/package.json
+++ b/server/package.json
@@ -5,20 +5,25 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "Enzo de Carvalho Santos",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "eslint": "^7.21.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "typeorm": "^0.2.31"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.31",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
