--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
@@ -26,6 +28,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
